# c--textbook

./: .gitignore  CMakeLists.txt  README.md  backmatter.tex  book.tex  frontmatter.tex  generated_inputs.tex  preamble.tex  references.bib
.github/workflows/: ci.yml
chapters/: ch001.tex  ch002.tex  ch003.tex  ch004.tex  ch005.tex  ch006.tex  ch007.tex  ch008.tex  ch009.tex  ch010.tex  ch011.tex  ch012.tex  ch013.tex  ch014.tex  ch015.tex  ch016.tex  ch017.tex  ch018.tex  ch019.tex  ch020.tex  ch021.tex  ch022.tex  ch023.tex  ch024.tex  ch025.tex  ch026.tex  ch027.tex  ch028.tex  ch029.tex  ch030.tex  ch031.tex  ch032.tex  ch033.tex  ch034.tex  ch035.tex  ch036.tex  ch037.tex  ch038.tex  ch039.tex  ch040.tex  (+142 more)
docs/: BUILD.md  book_manifest.json  code-verification-report.md  dependencies.md  technical-fact-check.md  visual-qa-report.md
examples/: README.md  algorithms.cpp  benchmark.cpp  calculator.cpp  concepts.cpp  concurrency.cpp  expected_style.cpp  filesystem_search.cpp  graph.cpp  ownership.cpp  polymorphism.cpp  task_manager.cpp  text_analysis.cpp
examples/chapters/: ch001.cpp  ch002.cpp  ch003.cpp  ch004.cpp  ch005.cpp  ch006.cpp  ch007.cpp  ch008.cpp  ch009.cpp  ch010.cpp  ch011.cpp  ch012.cpp  ch013.cpp  ch014.cpp  ch015.cpp  ch016.cpp  ch017.cpp  ch018.cpp  ch019.cpp  ch020.cpp  ch021.cpp  ch022.cpp  ch023.cpp  ch024.cpp  ch025.cpp  ch026.cpp  ch027.cpp  ch028.cpp  ch029.cpp  ch030.cpp  ch031.cpp  ch032.cpp  ch033.cpp  ch034.cpp  ch035.cpp  ch036.cpp  ch037.cpp  ch038.cpp  ch039.cpp  ch040.cpp  (+142 more)
figures/: README.md  translation-pipeline.tex
parts/: part01.tex  part02.tex  part03.tex  part04.tex  part05.tex  part06.tex  part07.tex  part08.tex  part09.tex  part10.tex  part11.tex  part12.tex
projects/taskledger/: CMakeLists.txt  README.md
projects/taskledger/app/: main.cpp
projects/taskledger/include/taskledger/: task.hpp
projects/taskledger/src/: task.cpp
projects/taskledger/tests/: test_task.cpp
tools/: build_book.sh  generate_book.py  qa_pdf.py  verify_examples.sh
